--- a/shop-test/pom.xml
+++ b/shop-test/pom.xml
@@ -2,10 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-shop</artifactId>
-        <groupId>com.jinglitong.springshop</groupId>
-        <version>1.0-SNAPSHOT</version>
+       <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -44,11 +45,6 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency> -->
-        <dependency>
-            <groupId>com.jinglitong.springshop</groupId>
-            <artifactId>shop-api</artifactId>
-            <version>${shop-api.version}</version>
-        </dependency>
 <!--        <dependency>
             <groupId>com.jinglitong.springshop</groupId>
             <artifactId>shop-mq</artifactId>
@@ -58,11 +54,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.jinglitong.springshop</groupId>
-            <artifactId>shop-common</artifactId>
-            <version>${shop-common.version}</version>
         </dependency>
         <dependency>
             <groupId>tk.mybatis</groupId>
