--- a/shop-test/pom.xml
+++ b/shop-test/pom.xml
@@ -203,7 +203,31 @@
 			<version>20180130</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty</artifactId>
+			<version>3.3.0.Final</version>
+		</dependency> -->
 		
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>5.0.0.Alpha2</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.jboss.marshalling/jboss-marshalling -->
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling</artifactId>
+			<version>1.3.19.GA</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.jboss.marshalling/jboss-marshalling-serial -->
+		<dependency>
+			<groupId>org.jboss.marshalling</groupId>
+			<artifactId>jboss-marshalling-serial</artifactId>
+			<version>1.3.18.GA</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
